# nix-rs

./: .gitignore  Cargo.toml  flake.nix  shell.nix  structure.md
src/: ast.rs  bytecode.rs  closure.rs  compile.rs  downcast.rs  error.rs  eval.rs  expr.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.lalrpop  parser.rs  slice.rs  token.rs
src/ast/: ast.rs  expr.rs  mod.rs  types.rs
src/builtins/: builtins.rs  env.rs  mod.rs
src/compile/: compile.rs  env.rs  ir.rs  mod.rs  symtable.rs
src/eval/: env.rs  eval.rs  mod.rs  test.rs  types.rs
src/expr_macro/: Cargo.toml
src/expr_macro/src/: lib.rs
src/lexer/: lexer.rs  mod.rs  test.rs
src/macros/: Cargo.toml
src/macros/builtin_macros/: Cargo.toml
src/macros/builtin_macros/src/: lib.rs
src/macros/src/: lib.rs
src/parser/: mod.rs  parser.rs  test.rs
src/test/: compile.rs  expr.rs  mod.rs
src/token/: types.rs
src/value/: mod.rs
src/vm/: data.rs  env.rs  mod.rs  program.rs  stack.rs  test.rs  vm.rs  vmthunk.rs
src/vm/value/: attrset.rs  list.rs  mod.rs  string.rs  thunk.rs
tests/: eval.rs  lexer.rs  parser.rs
