[package]
name = "nix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.11.0"
anyhow = "1.0.82"
itertools = "0.12.1"
rayon = "1.10.0"
rpds = "1.1.0"
paste = "1.0.15"

macros = { path = "./src/macros" }
