[package]
name = "nix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.11.0"
anyhow = "1.0.82"
itertools = "0.12.1"
rayon = "1.10.0"
rpds = "1.1.0"
derive_more = "0.99.17"
crossbeam-channel = "0.5.13"

macros = { path = "./src/macros" }
