[package]
name = "nix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.11"
anyhow = "1.0"
itertools = "0.12"
rayon = "1.10"
tokio = { version = "1.38", features = [ "full" ] }
rpds = "1.1"
derive_more = "0.99"
crossbeam-channel = "0.5"
num_cpus = "1.0"
ecow = "0.2"

macros = { path = "./src/macros" }
